# concept_of_rabbitmq_py

./: .gitignore  config.py  consumer.py  publisher.py  pyproject.toml
