[tool.poetry]
name = "test-rabbitmq"
version = "0.1.0"
description = ""
authors = ["cpt-nemmo <ysfedoseev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
pika-stubs = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
